# music_artists_data_paper

./: .gitignore  README.md  _targets.R  decompose_ids.R  init.R  init.sh  load_s3.R  make_pairing_ids.R  makefile  manual_search_final.R  pyproject.toml  test.R
R/: api_name_scraper.R  bind_items.R  clean_mbz_aliases.R  clean_press_corpora.R  clean_raw.R  consolidate_artists.R  consolidate_artists_1.R  deduplicate_ids.R  download_s3.R  filter_classical_albums.R  helper_functions.R  id_helpers.R  initialize_s3.R  join_artist_ids.R  join_items.R  load_data.R  load_mbz_genre.R  load_s3.R  load_streams.R  logging.R  make_aliases.R  make_artist_country.R  make_artist_gender.R  make_artist_id.R  make_artist_meta.R  make_artist_names.R  make_artist_pop.R  make_exo_pop.R  make_genre.R  make_genre_variables.R  make_isei.R  make_items.R  make_lang.R  make_mbz_deezer.R  make_mbz_releases.R  make_pairing_ids.R  make_press.R  make_press_counts.R  make_radio_variables.R  make_respondent_demo.R  (+23 more)
data/: base_compositeurs_10.06.csv  codes.csv  comp_wide_1706.csv  composers.csv  composers_n_plays_diff.csv  country_rank.csv  df_n_tracks.csv  gender_sample_200.csv  genres_from_deezer_albums.csv  manual_search.csv  missing_in_senscritique.csv  professions_recodees.csv  song_concentration_1000.csv  variable_names.csv
data_production/: gender_from_gpt.R  genres_from_deezer_api.R  names_from_deezer_api.R
documentation/: reprex_consolidation.R
fuzzy/: levenshtein-dist.py  match-artists.ipynb  match-contact_ids.py  senscritique.py
musicbrainz_sql/: install_mbslave.sh  makefile  (+11 more)
(+194 files in other folders)
