[project]
name = "music_artists_data_paper"
authors = [
  {name = "Paul Coudry", email = "paul.coudry@ensae.fr"},
]

description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

dependencies = [
  "fuzzywuzzy>=0.18.0",
  "ipykernel>=6.29.5",
  "openpyxl>=3.1.5",
  "pandas>=2.2.3",
  "pip>=26.0.1",
  "pyarrow>=20.0.0",
  "rapidfuzz>=3.14.3",
  "spacy>=3.8.11",
  "unidecode>=1.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src"]
